--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.9",
+    "swagger-jsdoc": "^3.4.0",
+    "swagger-ui-express": "^4.1.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
