--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,5 @@
     "source.fixAll": true
   },
   "typescript.format.semicolons": "insert",
+  "typescript.preferences.importModuleSpecifier": "relative"
 }
