--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --outputPath=dist",
+    "build": "ng build --prod --outputPath=dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,12 +22,13 @@
     "@auth0/auth0-spa-js": "^1.6.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "@angular/cli": "~8.3.4",
+    "@angular/compiler-cli": "~8.2.5",
+    "zone.js": "~0.9.1",
+    "typescript": "~3.5.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.4",
-    "@angular/cli": "~8.3.4",
-    "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
@@ -42,7 +43,6 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "tslint": "~5.15.0"
   }
 }
