--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,14 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "googleapis": "^45.0.0",
+    "jwks-rsa": "^1.6.0",
     "mongoose": "^5.7.9",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.1.2",
-    "winston": "^3.2.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
