--- a/client/package.json
+++ b/client/package.json
@@ -11,23 +11,23 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.803.4",
     "@angular/animations": "~8.2.5",
+    "@angular/cli": "~8.3.4",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
+    "@angular/compiler-cli": "~8.2.5",
     "@angular/core": "~8.2.5",
     "@angular/forms": "~8.2.5",
+    "@angular/language-service": "~8.2.5",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
-    "@auth0/auth0-spa-js": "^1.6.0",
+    "auth0-js": "^9.11.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "@angular/cli": "~8.3.4",
-    "@angular/compiler-cli": "~8.2.5",
-    "@angular-devkit/build-angular": "~0.803.4",
-    "@angular/language-service": "~8.2.5",
-    "zone.js": "~0.9.1",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@types/node": "~8.9.4",
