added book to book recomendations

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,5 @@ MONGO_URI=mongodb://root:example@localhost:27017?retryWrites=true&w=majority
 DB_NAME=booksy
 PORT=3000
 BOOK_API_KEY=
+RECOMBEE_API_KEY=
+RECOMBEE_DB_NAME=
