--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "googleapis": "^45.0.0",
     "jwks-rsa": "^1.6.0",
     "mongoose": "^5.7.9",
+    "recombee-api-client": "^2.4.1",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.1.2",
     "typescript": "^3.7.2",
