--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "express-validator": "^6.3.0",
     "googleapis": "^45.0.0",
     "jwks-rsa": "^1.6.0",
     "mongoose": "^5.7.9",
