added default cover & auth route

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --configuration=production --outputPath=dist",
+    "build-dev": "ng build --outputPath=dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
