--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "install": "npm install --prefix server && npm install --prefix client",
     "postinstall": "npm run build-front && npm run build-back",
     "build-front": "mkdir -p server/public && cd client && npm run build && cp -r dist/* ../server/public/",
+    "build-front-dev": "mkdir -p server/public && cd client && npm run build-dev && cp -r dist/* ../server/public/",
     "build-back": "cd server && npm run tsc",
     "start:back": "cd server && npm run start:prod",
     "start": "cd server && npm run prod",
