--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.30",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
